--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,11 @@
               "src/styles.css",
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/saga-blue/theme.css",
-              "./node_modules/primeng/resources/primeng.min.css"
+              "./node_modules/primeng/resources/primeng.min.css",
+              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/material-bootstrap-wizard.css",
+              "src/assets/css/demo.css",
+              "src/assets/css/main.css"
             ],
             "scripts": [
               "src/assets/js/jquery-2.2.4.min.js",
